handle empty classpath, and jdeps empty output, add launch4j xml file to create exe